  (User.tickets) and the open tickets (User.open_tickets).

* Added new helper script to run pserve

* New shortcut Task.project returns the Task.task_of.project value.

* Added 'PlaceHolder' property for 'FilterSelect Widgets'. And 'Label' property
  is used in construction of 'PlaceHolder' property.

* Set disabled prerequisite fields, until their prerequisite is selected.

0.2.0.a5
--------

* The ``code`` attribute of the SimpleEntity is now introduced as a separate
  mixin. To let it be used by the classes it is really needed.

* The ``query`` method is now converted to a property so it is now possible to
  use it like a property as in the SQLAlchemy.orm.Session as shown below::
    
    from stalker import Project
    Project.query.all() # instead of Project.query().all()

* ScheduleMixin.due_date is renamed to ScheduleMixin.end_date.

* Added a new class attribute to SimpleEntity called ``__auto_name__`` which
  controls the naming of the instances and instances derived from SimpleEntity.
  If ``__auto_name__`` is set to True the ``name`` attribute of the instance
  will be automatically generated and it will have the following format::
    
    {{ClassName}}_{{UUID4}}
    
  Here are a couple of naming examples::
    
    Ticket_74bb46b0-29de-4f3e-b4e6-8bcf6aed352d
    Version_2fa5749e-8cdb-4887-aef2-6d8cec6a4faa

* Fixed an autoflush issue with SQLAlchemy in StatusList class. Now the status
  column is again not nullable in StatusMixin.

* The WebUI form fields are now refreshed with newly added data.

* Added a new Dojo widget called TagSelect. Which is basically a widget for
  adding Tag style widgets.

0.2.0.a4
--------

* Added a new class called EntityType to hold all the available class names and
  capabilities.

* Version class now has a new attribute called ``inputs`` to hold the inputs of
  the current Version instance. It is a list of Link instances.

* FilenameTemplate classes ``path`` and ``filename`` attributes are no more