@@ -26,6 +26,9 @@ Stalker Changes
 
 * Set disabled prerequisite fields, until their prerequisite is selected.
 
+* Added 'StartDate', 'EndDate' and 'Duration' field to add_project page.
+  'StartDate', 'EndDate' properties are written on database.
+
 0.2.0.a5
 --------
 
